.gitignore middleware handlers tests

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,5 @@
 SECRET="csisecrect"
+
+SENDGRID_API_KEY="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"
+
+EMAIL="no-reply@threefold.tech"
