--- a/.github/workflows/flyspray.yaml
+++ b/.github/workflows/flyspray.yaml
@@ -20,24 +20,24 @@ jobs:
           go-version: 1.19
 
       - name: Install dependencies
-        working-directory: server
+        working-directory: backend
         run: go mod download
 
       - name: Run Tests
-        working-directory: server
+        working-directory: backend
         run: go test -v ./...
 
       - name: Run Staticcheck\
         uses: dominikh/staticcheck-action@v1.3.0
         with:
           version: 2022.1.3
-          working-directory: ./server/
+          working-directory: ./backend/
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.42.0
-          working-directory: ./server/
+          working-directory: ./backend/
 
       - name: Run gofmt
         uses: Jerome1337/gofmt-action@v1.0.5
